Se agregaron a 3 personajes

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Css\style.css">
 </head>
 <body>
-    <h1>Emprendedores de Tecnología</h1>
+    <h>Emprendedores de Tecnología</h1>
     
     <div class="emprendedor">
         <h2>1. Elon Musk</h2>
@@ -16,6 +16,26 @@
         <p><strong>Servicio:</strong> Tesla fabrica vehículos eléctricos, SpaceX se enfoca en la exploración espacial y Neuralink trabaja en interfaces cerebro-computadora.</p>
     </div>
 
-    <!-- Repite el bloque .emprendedor para los otros emprendedores -->
+    <div class="emprendedor">
+        <h2>2. Bill Puertas</h2>
+        <img src="img\bill gates.jpg" alt="">
+        <p><strong>Biografía:</strong> William Henry Gates III, conocido como Bill Gates, es un magnate empresarial, desarrollador de software, inversor, autor y filántropo estadounidense. Es cofundador de Microsoft, junto con su difunto amigo de la infancia Paul Allen.</p>
+        <p><strong>Servicio:</strong> Microsoft Corporation es una multinacional tecnológica de origen estadounidense que desarrolla y comercializa una amplia gama de software, hardware y servicios de TI, tanto para empresas como para consumidores privados.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>3. Steven Trabajos</h2>
+        <img src="img\steve jobs.jpg" alt="">
+        <p><strong>Biografía:</strong> Steven Paul Jobs ​fue un empresario, diseñador industrial, magnate empresarial, propietario de medios e inversor estadounidense. Fue cofundador y presidente ejecutivo de Apple​ y máximo accionista individual de The Walt Disney Company.</p>
+        <p><strong>Servicio:</strong> Apple es una plataforma poderosa y flexible que acompaña a las empresas en la oficina, en la fábrica y en terreno. El hardware, el software y los servicios trabajan juntos para ayudar a tu equipo a encontrar soluciones sencillas con sus dispositivos favoritos.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>3. Nikola "The Goat" Tesla</h2>
+        <img src="img\nikola tesla.jpeg" alt="">
+        <p><strong>Biografía:</strong> Nikola Tesla fue un inventor, ingeniero eléctrico y mecánico serbio nacionalizado estadounidense, célebre por sus contribuciones al diseño del moderno suministro de electricidad de corriente alterna.​</p>
+        <p><strong>Servicio:</strong> Una de las mayores contribuciones de Tesla a los modernos sistemas eléctricos fue la introducción de la energía eléctrica, generada, transmitida y utilizada en su forma de corriente alterna o simplemente CA.</p>
+    </div>
+
 </body>
 </html>
