Se agregaron mas

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Css\style.css">
 </head>
 <body>
-    <h>Emprendedores de Tecnología</h1>
+    <h1>Emprendedores de Tecnología</h1>
     
     <div class="emprendedor">
         <h2>1. Elon Musk</h2>
@@ -31,10 +31,24 @@
     </div>
 
     <div class="emprendedor">
-        <h2>3. Nikola "The Goat" Tesla</h2>
+        <h2>4. Nikola "The Goat" Tesla</h2>
         <img src="img\nikola tesla.jpeg" alt="">
         <p><strong>Biografía:</strong> Nikola Tesla fue un inventor, ingeniero eléctrico y mecánico serbio nacionalizado estadounidense, célebre por sus contribuciones al diseño del moderno suministro de electricidad de corriente alterna.​</p>
         <p><strong>Servicio:</strong> Una de las mayores contribuciones de Tesla a los modernos sistemas eléctricos fue la introducción de la energía eléctrica, generada, transmitida y utilizada en su forma de corriente alterna o simplemente CA.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>5. Jeff Bezos</h2>
+        <img src="img\Jeff Bezos.jpg" alt="">
+        <p><strong>Biografía:</strong> Jeffrey Preston Bezos es un empresario, ingeniero y magnate estadounidense, fundador, presidente ejecutivo y exdirector ejecutivo de la empresa de venta en línea Amazon de la cual posee el 7%.​En 2015 fue el quinto hombre más rico del mundo.​</p>
+        <p><strong>Servicio:</strong> Amazon.com, Inc. es una corporación estadounidense de comercio electrónico y servicios de computación en la nube a todos los niveles con sede en la ciudad de Seattle, Washington.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>6. Lee Byung-chul</h2>
+        <img src="img\Lee Byung-chul.jpg" alt="">
+        <p><strong>Biografía:</strong> Lee Byung-chul fue un empresario surcoreano, fundador del grupo Samsung.​</p>
+        <p><strong>Servicio:</strong> Samsung Electronics es una multinacional electrónica y de tecnologías de punta de la información con sede en Samsung Town, Seúl, Corea del Sur.​ Es la principal subsidiaria del Grupo Samsung.</p>
     </div>
 
 </body>
