--- a/Index.html
+++ b/Index.html
@@ -11,45 +11,84 @@
     
     <div class="emprendedor">
         <h2>1. Elon Musk</h2>
-        <img src="img\Elon_Musk_Colorado_2022_(cropped2).jpg" alt="">
+        <img src="img\Elon_Musk_Colorado_2022_(cropped2).jpg" alt="" width="300">
         <p><strong>Biografía:</strong> Elon Musk es un empresario y magnate sudafricano-estadounidense conocido por ser el CEO de Tesla, SpaceX y Neuralink, entre otras empresas.</p>
         <p><strong>Servicio:</strong> Tesla fabrica vehículos eléctricos, SpaceX se enfoca en la exploración espacial y Neuralink trabaja en interfaces cerebro-computadora.</p>
     </div>
 
     <div class="emprendedor">
         <h2>2. Bill Puertas</h2>
-        <img src="img\bill gates.jpg" alt="">
+        <img src="img\bill gates.jpg" alt="" width="300">
         <p><strong>Biografía:</strong> William Henry Gates III, conocido como Bill Gates, es un magnate empresarial, desarrollador de software, inversor, autor y filántropo estadounidense. Es cofundador de Microsoft, junto con su difunto amigo de la infancia Paul Allen.</p>
         <p><strong>Servicio:</strong> Microsoft Corporation es una multinacional tecnológica de origen estadounidense que desarrolla y comercializa una amplia gama de software, hardware y servicios de TI, tanto para empresas como para consumidores privados.</p>
     </div>
 
     <div class="emprendedor">
         <h2>3. Steven Trabajos</h2>
-        <img src="img\steve jobs.jpg" alt="">
+        <img src="img\steve jobs.jpg" alt="" width="300">
         <p><strong>Biografía:</strong> Steven Paul Jobs ​fue un empresario, diseñador industrial, magnate empresarial, propietario de medios e inversor estadounidense. Fue cofundador y presidente ejecutivo de Apple​ y máximo accionista individual de The Walt Disney Company.</p>
         <p><strong>Servicio:</strong> Apple es una plataforma poderosa y flexible que acompaña a las empresas en la oficina, en la fábrica y en terreno. El hardware, el software y los servicios trabajan juntos para ayudar a tu equipo a encontrar soluciones sencillas con sus dispositivos favoritos.</p>
     </div>
 
     <div class="emprendedor">
         <h2>4. Nikola "The Goat" Tesla</h2>
-        <img src="img\nikola tesla.jpeg" alt="">
+        <img src="img\nikola tesla.jpeg" alt="" width="300">
         <p><strong>Biografía:</strong> Nikola Tesla fue un inventor, ingeniero eléctrico y mecánico serbio nacionalizado estadounidense, célebre por sus contribuciones al diseño del moderno suministro de electricidad de corriente alterna.​</p>
         <p><strong>Servicio:</strong> Una de las mayores contribuciones de Tesla a los modernos sistemas eléctricos fue la introducción de la energía eléctrica, generada, transmitida y utilizada en su forma de corriente alterna o simplemente CA.</p>
     </div>
 
     <div class="emprendedor">
         <h2>5. Jeff Bezos</h2>
-        <img src="img\Jeff Bezos.jpg" alt="">
+        <img src="img\Jeff Bezos.jpg" alt="" width="300">
         <p><strong>Biografía:</strong> Jeffrey Preston Bezos es un empresario, ingeniero y magnate estadounidense, fundador, presidente ejecutivo y exdirector ejecutivo de la empresa de venta en línea Amazon de la cual posee el 7%.​En 2015 fue el quinto hombre más rico del mundo.​</p>
         <p><strong>Servicio:</strong> Amazon.com, Inc. es una corporación estadounidense de comercio electrónico y servicios de computación en la nube a todos los niveles con sede en la ciudad de Seattle, Washington.</p>
     </div>
 
     <div class="emprendedor">
         <h2>6. Lee Byung-chul</h2>
-        <img src="img\Lee Byung-chul.jpg" alt="">
+        <img src="img\Lee Byung-chul.jpg" alt="" width="300">
         <p><strong>Biografía:</strong> Lee Byung-chul fue un empresario surcoreano, fundador del grupo Samsung.​</p>
         <p><strong>Servicio:</strong> Samsung Electronics es una multinacional electrónica y de tecnologías de punta de la información con sede en Samsung Town, Seúl, Corea del Sur.​ Es la principal subsidiaria del Grupo Samsung.</p>
     </div>
+
+    <div class="emprendedor">
+        <h2>7. Roger Easton</h2>
+        <img src="img\roger easton.webp" alt="" width="300">
+        <p><strong>Biografía:</strong> Roger Lee Easton, Sr. fue un físico estadounidense y representante estatal que fue el principal inventor y diseñador del Sistema de Posicionamiento Global, junto con Ivan A. Getting y Bradford Parkinson..​</p>
+        <p><strong>Servicio:</strong> ¿Qué hizo Roger L Easton? Easton, el inventor del Sistema de Posicionamiento Global (GPS), que desarrolló junto con Ivan A. Getting y Bradford Parkinson.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>8. Larry Page</h2>
+        <img src="img\larry page.jpg" alt="" width="300">
+        <p><strong>Biografía:</strong> Lawrence "Larry" Edward Page es un ingeniero en computación y empresario estadounidense de origen judío, creador junto con Serguéi Brin de Google. Clasificado como la 10.ª persona más rica del mundo..​</p>
+        <p><strong>Servicio:</strong> ​Es conocido por haber creado el algoritmo matemático "PageRank" utilizado en el buscador web de Internet con un crecimiento de 95%. Actualmente se desempeña como CEO de la compañía Alphabet, una macro empresa de software y centros de datos que engloba a Google y otras empresas de su ámbito.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>9. Tim Berners</h2>
+        <img src="img\tim berners.jpg" alt="" width="300">
+        <p><strong>Biografía:</strong> Timothy "Tim" John Berners-Lee es un científico de la computación británico, conocido por ser el padre de la World Wide Web..​</p>
+        <p><strong>Servicio:</strong> Estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en diciembre de 1990.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>10. Michelle Dell</h2>
+        <img src="img\michelle dell.jpg" alt="" width="300">
+        <p><strong>Biografía:</strong> Michael Saul Dell es un hombre de negocios, inversionista, y filántropo de Estados Unidos. Él es el fundador y CEO de Dell Inc., uno de los principales vendedores de computadoras en el mundo..​</p>
+        <p><strong>Servicio:</strong> En 1985, la compañía produjo la primera computadora con su propio diseño —el "Turbo PC"— que contenía un procesador Intel 8098 con una velocidad de 8 MHz.</p>
+    </div>
+
+    <h2>:v</h2>
+    <ul>
+        <li><a href="">Emprendedores</a></li>
+        <li><a href="">El Salvador</a></li>
+        <li><a href="">Internacionales</a></li>
+    </ul>
+
+    <footer>
+        <p>Ricardo Gálvez Guzmán 20230332</p>
+    </footer>
 
 </body>
 </html>
