Se continuo la página

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="Css\style.css">
 </head>
 <body>
+    <header>
+        <nav>
+        <ul>
+            <li><a href="">Emprendedores</a></li>
+            <li><a href="Pages\El Salvador.html">El Salvador</a></li>
+            <li><a href="">Internacionales</a></li>
+        </ul>
+        </nav>
+    </header>
+
     <h1>Emprendedores de Tecnología</h1>
     
     <div class="emprendedor">
@@ -78,13 +88,6 @@
         <p><strong>Biografía:</strong> Michael Saul Dell es un hombre de negocios, inversionista, y filántropo de Estados Unidos. Él es el fundador y CEO de Dell Inc., uno de los principales vendedores de computadoras en el mundo..​</p>
         <p><strong>Servicio:</strong> En 1985, la compañía produjo la primera computadora con su propio diseño —el "Turbo PC"— que contenía un procesador Intel 8098 con una velocidad de 8 MHz.</p>
     </div>
-
-    <h2>:v</h2>
-    <ul>
-        <li><a href="">Emprendedores</a></li>
-        <li><a href="">El Salvador</a></li>
-        <li><a href="">Internacionales</a></li>
-    </ul>
 
     <footer>
         <p>Ricardo Gálvez Guzmán 20230332</p>
