--- a/Pages/El Salvador.html
+++ b/Pages/El Salvador.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="Css\style.css">
 </head>
 <body>
+    <header>
+        <nav>
+        <ul>
+            <li><a href="">Emprendedores</a></li>
+            <li><a href="Pages\El Salvador.html">El Salvador</a></li>
+            <li><a href="">Internacionales</a></li>
+        </ul>
+        </nav>
+    </header>
 
     <div class="emprendedor">
         <h2>1. Applaudo Studios</h2>
