Se termino la malparida página

--- a/Index.html
+++ b/Index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
         <ul>
-            <li><a href="">Emprendedores</a></li>
+            <li><a href="Index.html">Emprendedores</a></li>
             <li><a href="Pages\El Salvador.html">El Salvador</a></li>
-            <li><a href="">Internacionales</a></li>
+            <li><a href="C:\Users\rober\Downloads\Perfil-1\Pages\Internacionales.html">Internacionales</a></li>
         </ul>
         </nav>
     </header>
