--- a/Pages/El Salvador.html
+++ b/Pages/El Salvador.html
@@ -3,30 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="Css\style.css">
+    <title>Empresas de software nacionales</title>
+    <link rel="stylesheet" href="C:\Users\rober\Downloads\Perfil-1\Css\style.css">
 </head>
 <body>
     <header>
         <nav>
         <ul>
-            <li><a href="">Emprendedores</a></li>
-            <li><a href="Pages\El Salvador.html">El Salvador</a></li>
-            <li><a href="">Internacionales</a></li>
+            <li><a href="C:\Users\rober\Downloads\Perfil-1\Index.html">Emprendedores</a></li>
+            <li><a href="C:\Users\rober\Downloads\Perfil-1\Pages\El Salvador.html">El Salvador</a></li>
+            <li><a href="C:\Users\rober\Downloads\Perfil-1\Pages\Internacionales.html">Internacionales</a></li>
         </ul>
         </nav>
     </header>
 
+    <h1>Empresas de software nacionales</h1>
+
     <div class="emprendedor">
         <h2>1. Applaudo Studios</h2>
-        <img src="img\images.png" alt="">
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\Applaudo.jpg" alt="" width="300">
         <p><strong>Servicio:</strong> En Applaudo somos más que una empresa desarrolladora de software: nos esforzamos por cerrar brechas, abrir oportunidades profesionales, aportar sentido social a la tecnología y contribuir a la formación de talento global.</p>
     </div>
     
     <div class="emprendedor">
         <h2>2. Sysde International</h2>
-        <img src="img\sysde.jfif" alt="">
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\Sysde.jpg" alt="">
         <p><strong>Servicio:</strong> Sysde es una empresa con más de 20 años de experiencia en el diseño y desarrollo de sistemas para microfinanzas y soluciones tecnológicas innovadoras para organizaciones del sector financiero global.</p>
     </div>
 
+    <div class="emprendedor">
+        <h2>3. Bortex SA de CV</h2>
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\Bortex.jpg" alt="" width="300">
+        <p><strong>Servicio:</strong> Venta de Equipo Informático, Hardware , suministros , muebles ,puntos de ventas y Software.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>4. Upgrade Business S.A. de C.V.</h2>
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\Upgrade.jpg" alt="" width="300">
+        <p><strong>Servicio:</strong> Somos representante internacional y nacional de propiedad intelectual, Creación y transformación de imagen internacional, aplicando nuestra metodología de coach ejecutivo, tecnológico y consultorías con alto grado de impacto.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>5. Tech Americas ELS</h2>
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\Tech.jpg" alt="" width="300">
+        <p><strong>Servicio:</strong> Tech Americas works with organizations of all sizes to improve performance. We help to institute new business processes and technologies that allow those companies reduce expenses and improve return on investment. We implement efficiencies in your business that help you meet your goals for this year and beyond.</p>
+    </div>
+
+    <footer>
+        <p>Ricardo Gálvez Guzmán 20230332</p>
+    </footer>
+
 </body>
+</html>
