--- a/Pages/Internacionales.html
+++ b/Pages/Internacionales.html
@@ -3,16 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emprendedores de Tecnología</title>
-    <link rel="stylesheet" href="Css\style.css">
+    <title>Empresas de software Internacionales</title>
+    <link rel="stylesheet" href="C:\Users\rober\Downloads\Perfil-1\Css\style.css">
 </head>
 <body>
+    <header>
+        <nav>
+        <ul>
+            <li><a href="C:\Users\rober\Downloads\Perfil-1\Index.html">Emprendedores</a></li>
+            <li><a href="C:\Users\rober\Downloads\Perfil-1\Pages\El Salvador.html">El Salvador</a></li>
+            <li><a href="C:\Users\rober\Downloads\Perfil-1\Pages\Internacionales.html">Internacionales</a></li>
+        </ul>
+        </nav>
+    </header>
+
+    <h1>Empresas de software Internationales</h1>
 
     <div class="emprendedor">
-        <h2>1. Elon Musk</h2>
-        <img src="img\Elon_Musk_Colorado_2022_(cropped2).jpg" alt="">
-        <p><strong>Biografía:</strong> Elon Musk es un empresario y magnate sudafricano-estadounidense conocido por ser el CEO de Tesla, SpaceX y Neuralink, entre otras empresas.</p>
-        <p><strong>Servicio:</strong> Tesla fabrica vehículos eléctricos, SpaceX se enfoca en la exploración espacial y Neuralink trabaja en interfaces cerebro-computadora.</p>
+        <h2>1. Dell</h2>
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\Dell.jpg" alt="" width="300">
+        <p><strong>Servicio:</strong> Dell es una compañía multinacional estadounidense establecida en Round Rock, la cual desarrolla, fabrica, vende y da soporte a ordenadores personales, servidores, switches de red, programas informáticos, periféricos y otros productos relacionados con la tecnología.</p>
     </div>
     
+    <div class="emprendedor">
+        <h2>2. Accenture</h2>
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\Accenture.jpg" alt="" width="300">
+        <p><strong>Servicio:</strong> Accenture Limited es una empresa multinacional de consultoría estratégica, servicios tecnológicos y externalización.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>3. HP Enterprise</h2>
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\HPE.jpg" alt="" width="300">
+        <p><strong>Servicio:</strong> HPE es un experto en el almacenamiento inteligente de datos, con servicios y plataformas que utilizan la Inteligencia Artificial para aprovechar al máximo los datos.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>4. Cisco</h2>
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\Cisco.jpg" alt="" width="300">
+        <p><strong>Servicio:</strong> Cisco Systems es una empresa global con sede en San José, California, Estados Unidos, principalmente dedicada a la fabricación, venta, mantenimiento y consultoría de equipos de telecomunicaciones.</p>
+    </div>
+
+    <div class="emprendedor">
+        <h2>5. Oracle Corporation</h2>
+        <img src="C:\Users\rober\Downloads\Perfil-1\img\Oracle.jpg" alt="" width="300">
+        <p><strong>Servicio:</strong> Oracle Corporation es una compañía especializada en el desarrollo de soluciones de nube y locales.</p>
+    </div>
+
+    <footer>
+        <p>Ricardo Gálvez Guzmán 20230332</p>
+    </footer>
+
 </body>
+</html>
